--- a/EXAMEN/EXAMEN/index.html
+++ b/EXAMEN/EXAMEN/index.html
@@ -46,9 +46,9 @@
 		</div>
 		<div id="contenedor-iconos">
 			<img onclick="play()" id="icono-control"
-				src="/EXAMEN/EXAMEN/IMAGES/play_arrow_24dp_FILL0_wght400_GRAD0_opsz24 (1).png">
+				src="./IMAGES/play_arrow_24dp_FILL0_wght400_GRAD0_opsz24 (1).png">
 			<img onclick="pause()" id="icono-control2"
-				src="/EXAMEN/EXAMEN/IMAGES/pause_24dp_FILL0_wght400_GRAD0_opsz24.png">
+				src="./IMAGES/pause_24dp_FILL0_wght400_GRAD0_opsz24.png">
 		</div>
 	</section>
 	<h2>Animacio</h2>
